[project]
name = "ais-dev2il-ais-power-smoothie-cook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pyjokes>=0.8.3",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4"
]

[vulnerability_criteria]
ignore_vulnerabilities = ["GHSA-5239-wwwm-4pmq", "GHSA-6w46-j5rx-g56g"]
